tests/compile-fail/integration__integration__difficulty__diff_switch_in_inline_fn_call.snap
---
source: tests/integration/difficulty.rs
expression: stderr
---
error: feature not supported by format
   ┌─ <input>:8:1
   │  
 8 │ ╭ inline void foo(int a) {
 9 │ │     I1 = 2 * a;
10 │ │ }
   │ ╰─^ not supported by old-format ECL files

error: feature not supported by format
   ┌─ <input>:13:5
   │
13 │     foo(2:3:4:5);
   │     ^^^^^^^^^^^^ call to inline func not supported by format


